# torch_implementations

./: LICENSE  README.md
models/AugmentAnything/: LICENSE  MANIFEST.in  README.md  augment_anything.py  augment_sam.py  faiss_augment.py  faiss_ds.py  pyproject.toml  requirements.txt  setup.py
models/AugmentAnything/.github/workflows/: tests.yml
models/AugmentAnything/assets/: .gitkeep  README.md
models/AugmentAnything/augment_anything/: __init__.py  core.py  dino_features.py  faiss_ds.py
models/AugmentAnything/tests/: __init__.py  conftest.py  test_core.py  test_faiss_ds.py  test_feature_compatibility.py  test_integration.py
models/Custom/: 1d_gaussian_flow.py  auto_vlm_caption.py  continuous_flow_vae.py  depthconv.py  diffusion_memory.py  flow_matching_scheduler.py  flow_test.py  flow_viz.py  flow_viz_vae.py  math_flow_viz.py  probability_flow_ode.py  rectified_flow_dit.py  video_data_manager.py  video_diffuser.py
models/DeepDream/: dream_infer.py  v3_update.py
models/DepthPro/: depth_estimation.py  depth_estimation_theory.md  depth_stream.py  model_architecture.md  readme.md  video_stream.py
models/FSQ/: fsq-enhanced-tutorial.md  fsq-theoretical-analysis.md  fsq-tutorial.md  fsq.py  fsq_vis.py  test-fsq.py
models/HDBSCAN/: boruvka_sollin.py  hdbscan_tree.py
models/IJepa/ijepa_model.py/: ijepa_model.py  ijepa_train.py
models/KAN/: kan_model.py
models/Rectified_Flow_Transformer/: RFormer_model.py  celeba-flux-config.py  continuous-autoencoder.py  dopri5-implementation.py  mm-dit.py  quick-start.py  rectified-flow-transformer.py  sampling-and-evaluation.py
models/SSAST/: distillation_training.py  eval.py  ssast_config.py  ssast_feature_extractor.py  ssast_model.py  train_dataloader.py  upload_ssast.py
models/SuperGlue/: VideoGlue.py
models/VLM/: smol_infer.py  video_analysis_results.txt
